Fix issue that text in div cannot go to next line when it is overflowed

--- a/src/css/EditCardModal.css
+++ b/src/css/EditCardModal.css
@@ -16,6 +16,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  white-space: normal;
 }
 
 .hide {
@@ -60,10 +61,15 @@
   margin-bottom: 1.2rem;
 }
 
-input.modal-item-title {
+textarea.modal-item-title {
   margin-bottom: .6rem;
   font-size: inherit;
   border-radius: 3px;
+  height: 1.2rem;
+  width: 97%;
+  word-wrap: break-word;
+  resize: none;
+  overflow: hidden;
 }
 
 .modal-item-description-wrapper {
@@ -94,6 +100,7 @@ input.modal-item-title {
 }
 
 .modal-item-description {
+  position: relative;
   width: 99%;
   font-size: inherit;
   position: relative;
